# dart_native

./: .gitignore  .metadata  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: dart.yml  release.yml
android/: .project  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
dart_native/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart_native/.fvm/: fvm_config.json
dart_native/.history/example/: pubspec_20200605113804.yaml
dart_native/android/: CMakeLists.txt  build.gradle  proguard-rules.pro  settings.gradle
dart_native/android/gradle/wrapper/: gradle-wrapper.properties
dart_native/android/src/main/java/com/dartnative/dart_native/: ArrayListConverter.java  CallbackInvocationHandler.java  CallbackManager.java  DartNative.java  DartNativeInterface.java  DartNativePlugin.java  FunctionHandler.java  InterfaceMessenger.java  InterfaceRegistry.java  MethodUtils.java  Promise.java
dart_native/android/src/main/java/com/dartnative/dart_native/annotation/: InterfaceEntry.java  InterfaceMethod.java
dart_native/android/src/main/jni/: dart_native.cpp  dn_callback.cpp  dn_callback.h  dn_dart_api.cc  dn_dart_api.h  dn_jni_helper.cc  dn_jni_helper.h  dn_lifecycle_manager.cc  dn_method.cc  dn_method_call.cc  dn_method_call.cpp  dn_method_call.h  dn_method_helper.cc  dn_signature_helper.cpp  dn_signature_helper.h  dn_thread.cpp  dn_thread.h  dn_type_convert.cpp  dn_type_convert.h  jni_object_ref.h
dart_native/android/src/main/jni/include/: dart_api_dl.c  dart_native.h  dn_callback.h  dn_dart_api.h  dn_interface.h  dn_jni_env.h  dn_jni_helper.h  dn_jni_utils.h  dn_lifecycle_manager.h  dn_log.h  dn_method.h  dn_method_helper.h  dn_native_invoker.h  dn_thread.h  jni_object_ref.h
dart_native/android/src/main/jni/src/: dart_native.cc  dn_callback.cc  dn_dart_api.cc  dn_interface.cc  dn_jni_env.cc  dn_jni_helper.cc  dn_jni_utils.cc  dn_lifecycle_manager.cc  dn_method.cc  dn_method_helper.cc  dn_native_invoker.cc  dn_thread.cc
dart_native/example/: analysis_options.yaml  pubspec.yaml
dart_native/example/android/: build.gradle
dart_native/example/ios/: Podfile
dart_native/example/lib/: dn_unit_test.dart  log.dart  main.dart  main.dn.dart  main.java.dn.dart  main.oc.dn.dart
dart_native/example/macos/: Podfile
dart_native/example/test/: widget_test.dart
dart_native/ios/: .clang-format  .gitignore  build.sh  dart_native.podspec
dart_native/ios/Classes/: DNAssociatedDartObject.h  DNAssociatedDartObject.m  DNBlockCreator.h  DNBlockCreator.m  DNBlockHelper.h  DNBlockWrapper.h  DNBlockWrapper.m  DNDartBridge.mm  DNError.h  DNError.m  DNException.h  DNException.mm  DNFFIHelper.h  DNFFIHelper.m  DNInterface.h  DNInterface.mm  DNInterfaceInvoker.h  DNInterfaceInvoker.m  DNInterfaceRegistry.h  DNInterfaceRegistry.m  DNInvocation.m  DNMacro.h  DNMemoryValidation.h  (+22 more)
dart_native/lib/: dart_native.dart  dart_native_annotation.dart
dart_native/macos/: .gitignore  dart_native.podspec  generate_for_debug_and_release.sh
dart_native/test/: dart_native_test.dart
dart_native_gen/: CHANGELOG.md  LICENSE  README.md  build.yaml  pubspec.yaml
dart_native_gen/example/: README.md  pubspec.yaml
dart_native_gen/lib/: builder.dart  dart_native_gen.dart  type_marker.dart
dart_native_gen/test/: dart_native_gen_test.dart
example/: README.md  pubspec.yaml
example/ios/: .gitignore  Podfile
example/lib/: delegatestub.dart  main.dart  runtimestub.dart
example/test/: widget_test.dart
ios/: dart_objc.podspec  native_runtime.podspec
ios/Classes/: BlockCreator.h  BlockCreator.m  DNBlockWrapper.m  DNFFIHelper.h  DNFFIHelper.m  DNInvocation.h  DNMacro.h  DNMethodIMP.m  DNObjectDealloc.m  DNPointerWrapper.h  DOBlockWrapper.h  DOBlockWrapper.m  DOCharPtrWrapper.h  DOCharPtrWrapper.m  DOFFIHelper.h  DOFFIHelper.m  DOInvocation.h  DOInvocation.m  DOMacro.h  DOMethodIMP.h  DOMethodIMP.m  DOObjectDealloc.h  DOObjectDealloc.m  DOPointerWrapper.h  DOPointerWrapper.m  DartNativePlugin.h  DartNativePlugin.m  DartObjcPlugin.h  DartObjcPlugin.m  NSThread+DartObjC.h  NSThread+DartObjC.m  NativeRuntimePlugin.h  NativeRuntimePlugin.m  RuntimeStub.h  RuntimeStub.m  SwiftNativeRuntimePlugin.swift  Wrapper-Interface.h  native_runtime.h  native_runtime.mm
lib/: common.dart  dart_native.dart  dart_objc.dart  foundation.dart  native_runtime.dart  nsobject.dart  runtime.dart
lib/src.android/: dart_java.dart
test/: dart_objc_test.dart  native_runtime_test.dart
(+608 files in other folders)
